GNOME Bugzilla – Bug 661244
Incorrect glib2 dependency version
Last modified: 2012-03-13 22:08:46 UTC
Json-Glib 0.14.0 advertises that the minimum required glib2 version is 2.26, however it uses "g_list_free_full" which is only available since version 2.28.
Created attachment 199179 [details] [review] Conditionally use g_list_free_full() JSON-GLib depends on GLib ≥ 2.26, and g_list_free_full() was introduced in GLib 2.28, so we have to check against the GLib version if we want to use it.
Attachment 199179 [details] pushed as e95d570 - Conditionally use g_list_free_full()
[Fixing Default QA assignee for json-glib - see 613232#c1. Sorry for bugmail noise.]