Conditionally use g_list_free_full()

JSON-GLib depends on GLib ≥ 2.26, and g_list_free_full() was introduced
in GLib 2.28, so we have to check against the GLib version if we want to
use it.

https://bugzilla.gnome.org/show_bug.cgi?id=661244