json-glib/json-path.c
@@ -292,7 +292,12 @@ json_path_finalize (GObject *gobject)
 {
   JsonPath *self = JSON_PATH (gobject);
 
+#if GLIB_CHECK_VERSION (2, 28, 0)
   g_list_free_full (self->nodes, path_node_free);
+#else
+  g_list_foreach (self->nodes, (GFunc) path_node_free, NULL);
+  g_list_free (self->nodes);
+#endif
 
   G_OBJECT_CLASS (json_path_parent_class)->finalize (gobject);
 }
@@ -706,7 +711,14 @@ json_path_compile (JsonPath    *path,
 #endif /* JSON_ENABLE_DEBUG */
 
   if (path->nodes != NULL)
-    g_list_free_full (path->nodes, path_node_free);
+    {
+#if GLIB_CHECK_VERSION (2, 28, 0)
+      g_list_free_full (path->nodes, path_node_free);
+#else
+      g_list_foreach (path->nodes, (GFunc) path_node_free, NULL);
+      g_list_free (path->nodes);
+#endif
+    }
 
   path->nodes = nodes;
   path->is_compiled = (path->nodes != NULL);
@@ -714,7 +726,12 @@ json_path_compile (JsonPath    *path,
   return path->nodes != NULL;
 
 fail:
+#if GLIB_CHECK_VERSION (2, 28, 0)
   g_list_free_full (nodes, path_node_free);
+#else
+  g_list_foreach (nodes, (GFunc) path_node_free, NULL);
+  g_list_free (nodes);
+#endif
 
   return FALSE;
 }
